--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
     </php>
 
     <testsuites>
-        <testsuite name="Mailery _____ tests">
+        <testsuite name="Mailery Messenger tests">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
