--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4",
-        "foxy/foxy": "^1.0"
+        "foxy/foxy": "^1.0",
+        "symfony/beanstalkd-messenger": "^6.1",
+        "symfony/messenger": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
